22052023 | base bootstrap grid dynamique

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
     <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,42 +16,7 @@
         <h1>Example heading <span class="badge bg-secondary">New</span></h1>
     </header>
     <main>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <img src="./assets/img/fish-fishing-food-svgrepo-com.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="./assets/img/fish-fishing-food-svgrepo-com.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="./assets/img/fish-fishing-food-svgrepo-com.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="container text-center" id="grid">
         </div>
     </main>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
