--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Example heading <span class="badge bg-secondary">New</span></h1>
     </header>
     <main>
-        <div class="container text-center" id="grid">
+        <div class="container" id="grid">
         </div>
     </main>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
