--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <header>
     </header>
     <main>
+        <div class="container">
+            <div class="search-main input-group input-group-lg mb-4">
+                <input type="text" class="form-control" placeholder="Rechercher une recette">
+                <span class="input-group-text">
+                    <i class="fa fa-search"></i>
+                </span>
+            </div>
+        </div>
         <div class="container" id="grid">
         </div>
     </main>
