--- a/index.html
+++ b/index.html
@@ -23,6 +23,57 @@
                 </span>
             </div>
         </div>
+        <div class="container advanced-search">
+            <div class="dropdown-container container">
+                <div class="listbox-dropdown">
+                    <div class="listbox-dropdown__header bg-blue">
+                        <input type="text" value="Ingrédients" class="listbox-dropdown__input bg-blue"
+                            id="dropdown-input">
+                        <div class="arrow-container" tabindex="0">
+                            <span class="arrow" tabindex="0"></span>
+                        </div>
+                    </div>
+                    <ul class="listbox-dropdown__list bg-blue" id="dropdown">
+                        <li class="listbox-dropdown__option" id="hey" tabindex="-1">yooooooooooooooo
+                        </li>
+                        <li class="listbox-dropdown__option" tabindex="0">Liste 1-2</li>
+                        <li class="listbox-dropdown__option" tabindex="0">Liste 1-3</li>
+                    </ul>
+                    <ul class="listbox-dropdown__list bg-blue">
+                        <li class="listbox-dropdown__option" tabindex="0">Short </li>
+                        <li class="listbox-dropdown__option" tabindex="0">Titre</li>
+                        <li class="listbox-dropdown__option" tabindex="0">Truc</li>
+                    </ul>
+                    <ul class="listbox-dropdown__list bg-blue">
+                        <li class="listbox-dropdown__option" tabindex="0">Liste 3-1</li>
+                        <li class="listbox-dropdown__option" tabindex="0">Liste 3-2</li>
+                        <li class="listbox-dropdown__option" tabindex="0">Liste 3-3</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="dropdown-container container">
+                <div class="listbox-dropdown">
+                    <div class="listbox-dropdown__header bg-green">
+                        <input type="text" value="Appareils" class="listbox-dropdown__input bg-green"
+                            id="dropdown-input">
+                        <div class="arrow-container" tabindex="0">
+                            <span class="arrow" tabindex="0"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="dropdown-container container">
+                <div class="listbox-dropdown">
+                    <div class="listbox-dropdown__header bg-red">
+                        <input type="text" value="Ustensiles" class="listbox-dropdown__input bg-red"
+                            id="dropdown-input">
+                        <div class="arrow-container" tabindex="0">
+                            <span class="arrow" tabindex="0"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container" id="grid">
         </div>
     </main>
