--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
             <div class="advanced-search">
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
-                        <div class="listbox-dropdown">
+                        <div class="listbox-dropdown" id="ingredients">
                             <div class="listbox-dropdown__header bg-blue">
-                                <input type="text" value="Ingrédients" class="listbox-dropdown__input bg-blue"
-                                    id="dropdown-input">
+                                <input type="text" value="Ingrédients" class="listbox-dropdown__input bg-blue">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
                             </div>
-                            <ul class="listbox-dropdown__list bg-blue" id="dropdown">
-                                <li class="listbox-dropdown__option" id="hey" tabindex="-1">yooooooooooooooo
+                            <!-- <ul class="listbox-dropdown__list bg-blue" id="dropdown">
+                                <li class="listbox-dropdown__option" id="hey" tabindex="0">yooooooooooooooo
                                 </li>
                                 <li class="listbox-dropdown__option" tabindex="0">Liste 1-2</li>
                                 <li class="listbox-dropdown__option" tabindex="0">Liste 1-3</li>
@@ -50,7 +49,7 @@
                                 <li class="listbox-dropdown__option" tabindex="0">Liste 3-1</li>
                                 <li class="listbox-dropdown__option" tabindex="0">Liste 3-2</li>
                                 <li class="listbox-dropdown__option" tabindex="0">Liste 3-3</li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
