29052023 | base hydradatation ustensils + appliances

--- a/index.html
+++ b/index.html
@@ -34,28 +34,12 @@
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
                             </div>
-                            <!-- <ul class="listbox-dropdown__list bg-blue" id="dropdown">
-                                <li class="listbox-dropdown__option" id="hey" tabindex="0">yooooooooooooooo
-                                </li>
-                                <li class="listbox-dropdown__option" tabindex="0">Liste 1-2</li>
-                                <li class="listbox-dropdown__option" tabindex="0">Liste 1-3</li>
-                            </ul>
-                            <ul class="listbox-dropdown__list bg-blue">
-                                <li class="listbox-dropdown__option" tabindex="0">Short </li>
-                                <li class="listbox-dropdown__option" tabindex="0">Titre</li>
-                                <li class="listbox-dropdown__option" tabindex="0">Truc</li>
-                            </ul>
-                            <ul class="listbox-dropdown__list bg-blue">
-                                <li class="listbox-dropdown__option" tabindex="0">Liste 3-1</li>
-                                <li class="listbox-dropdown__option" tabindex="0">Liste 3-2</li>
-                                <li class="listbox-dropdown__option" tabindex="0">Liste 3-3</li>
-                            </ul> -->
                         </div>
                     </div>
                 </div>
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
-                        <div class="listbox-dropdown">
+                        <div class="listbox-dropdown" id="appliances">
                             <div class="listbox-dropdown__header bg-green">
                                 <input type="text" value="Appareils" class="listbox-dropdown__input bg-green">
                                 <div class="arrow-container" tabindex="0">
@@ -67,7 +51,7 @@
                 </div>
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
-                        <div class="listbox-dropdown">
+                        <div class="listbox-dropdown" id="ustensils">
                             <div class="listbox-dropdown__header bg-red">
                                 <input type="text" value="Ustensiles" class="listbox-dropdown__input bg-red">
                                 <div class="arrow-container" tabindex="0">
