29052023 | dropdowns draft #2 > event listeners

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 </span>
             </div>
         </div>
+        <div class="tags-container container" id="tags-container">
+        
+        </div>
         <div class="container search-wrapper">
             <div class="advanced-search">
                 <div class="advanced-search__wrapper">
