30052023 | header + mise en forme couleurs tags et dropdowns

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
     <header>
+        <div class="container page-header">
+            <img src="./assets/img/chef_hat.png" alt="site logo">
+            <h1>Les petits plats</h1>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -31,8 +35,8 @@
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="ingredients">
-                            <div class="listbox-dropdown__header bg-blue">
-                                <input type="text" value="Ingrédients" class="listbox-dropdown__input bg-blue">
+                            <div class="listbox-dropdown__header text-bg-primary">
+                                <input type="text" value="Ingrédients" class="listbox-dropdown__input text-bg-primary">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
@@ -43,8 +47,8 @@
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="appliances">
-                            <div class="listbox-dropdown__header bg-green">
-                                <input type="text" value="Appareils" class="listbox-dropdown__input bg-green">
+                            <div class="listbox-dropdown__header text-bg-success">
+                                <input type="text" value="Appareils" class="listbox-dropdown__input text-bg-success">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
@@ -55,8 +59,8 @@
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="ustensils">
-                            <div class="listbox-dropdown__header bg-red">
-                                <input type="text" value="Ustensiles" class="listbox-dropdown__input bg-red">
+                            <div class="listbox-dropdown__header text-bg-danger">
+                                <input type="text" value="Ustensiles" class="listbox-dropdown__input text-bg-danger">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
