30052023 | ajustement couleurs bootstrap + img & styling grid

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                 </span>
             </div>
         </div>
-        <div class="tags-container container" id="tags-container">
-        
-        </div>
+        <div class="tags-container container" id="tags-container"></div>
         <div class="container search-wrapper">
             <div class="advanced-search">
                 <div class="advanced-search__wrapper">
