--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="ingredients">
-                            <div class="listbox-dropdown__header text-bg-primary">
-                                <input type="text" value="Ingrédients" class="listbox-dropdown__input text-bg-primary">
+                            <div class="listbox-dropdown__header text-bg-primary" id="input_ingredients">
+                                <input type="text" class="listbox-dropdown__input text-bg-primary" value="Ingrédients" 
+                                placeholder="Rechercher un ingredient">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
