30052023 | DropdownListbox.js lot#1

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="ingredients">
                             <div class="listbox-dropdown__header text-bg-primary" id="input_ingredients">
-                                <input type="text" class="listbox-dropdown__input text-bg-primary" value="Ingrédients" 
-                                placeholder="Rechercher un ingredient">
+                                <input type="text" class="listbox-dropdown__input text-bg-primary" value="ingrédients" 
+                                placeholder="Rechercher un ingrédient">
                                 <div class="arrow-container" tabindex="0">
                                     <span class="arrow" tabindex="0"></span>
                                 </div>
