31052023 | DropdownListbox.js > display done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="tags-container container" id="tags-container"></div>
         <div class="container search-wrapper">
-            <div class="advanced-search">
+            <div class="advanced-search" id="advanced-search">
                 <div class="advanced-search__wrapper">
                     <div class="dropdown-container">
                         <div class="listbox-dropdown" id="ingredients">
