02062023 | MVC > binding tests

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="container">
             <div class="search-main input-group input-group-lg mb-4">
-                <input type="text" class="form-control" placeholder="Rechercher une recette">
+                <input type="text" class="form-control" id="search-main" placeholder="Rechercher une recette">
                 <span class="input-group-text">
                     <i class="fa fa-search"></i>
                 </span>
