--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="advanced-search" id="advanced-search">
             </div>
         </div>
-        <div class="container" id="grid">
+        <div class="container gallery_section" id="grid">
         </div>
     </main>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
