16062023 | RecipesView > mains search : no match message

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="advanced-search" id="advanced-search">
             </div>
         </div>
+        <h4 class="container rcp-nomatch" id="rcp-nomatch">Aucune recette ne correspond à votre critère… vous pouvez
+            chercher « tarte aux pommes », « poisson », etc...
+        </h4>
         <div class="container gallery_section" id="grid">
         </div>
     </main>
